k8s/deployment-uat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-uat
  labels:
      app: api-gateway
      environment: uat
      tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
      environment: uat
  template:
    metadata:
      labels:
        app: api-gateway
        environment: uat
    spec:
      containers:
        - name: api-gateway-uat
          image: docker.lachouquette.ch/api-gateway:latest
          ports:
            - name: container-port
              containerPort: 4000
          livenessProbe:
            httpGet:
              path: /health
              port: container-port
            failureThreshold: 1
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /graphql
              port: container-port
            failureThreshold: 12
            periodSeconds: 5
