k8s/prod-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-prod
  labels:
      app: api-gateway
      environment: prod
      tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-gateway
      environment: prod
  template:
    metadata:
      labels:
        app: api-gateway
        environment: prod
    spec:
      containers:
        - name: api-gateway-prod
          image: docker.lachouquette.ch/api-gateway:latest
          ports:
            - name: container-port
              containerPort: 4000
          startupProbe:
            httpGet:
              path: /ready
              port: container-port
            timeoutSeconds: 5
            failureThreshold: 12
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: container-port
            timeoutSeconds: 3
            failureThreshold: 3
            periodSeconds: 15
