k8s/uat-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-uat
  labels:
      app: api-gateway
      environment: uat
      tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
      environment: uat
  template:
    metadata:
      labels:
        app: api-gateway
        environment: uat
    spec:
      containers:
        - name: api-gateway-uat
          image: docker.lachouquette.ch/api-gateway:latest
          command: [ "yarn" ]
          args: [ "dev" ]
          ports:
            - name: container-port
              containerPort: 4000
          startupProbe:
            tcpSocket:
              port: container-port
            initialDelaySeconds: 5
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: container-port
