k8s/prod-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-prod
spec:
  type: NodePort
  selector:
    app: api-gateway
    environment: prod
  ports:
    - port: 4000
      targetPort: 4000
