k8s/service-uat.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-uat
spec:
  type: NodePort
  selector:
    app: api-gateway-uat
    environment: uat
  ports:
    - port: 4000
      targetPort: 4000
