k8s/uat-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-uat
spec:
  rules:
    - host: api-gateway-uat.lachouquette.ch
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: api-gateway-uat
                port:
                  number: 4000
